fix: integration with long categories no more break the layout
fixes #48

--- a/packages/interface-default/src/index.module.css
+++ b/packages/interface-default/src/index.module.css
@@ -178,19 +178,30 @@ html[data-theme='dark'] {
 }
 
 @media (min-width: 767px) {
-  .integrationField {
-    display: flex;
+  .formIntegrationsList {
+    display: grid;
+    grid-template-columns: minmax(220px, max-content) 1fr;
+    grid-gap: 2rem;
   }
 }
 
-.integrationField:first-child {
-  padding-top: 0;
-}
-.integrationField:last-child {
-  padding-bottom: 0;
+.formIntegrationsList > * {
+  position: relative;
 }
 
-.integrationField + .integrationField::before,
+@media (min-width: 767px) {
+  .formIntegrationsList > *:not(:last-child):not(:nth-last-child(2))::before {
+    content: '';
+    display: block;
+    border-top: 1px solid currentColor;
+    opacity: 0.3;
+    position: absolute;
+    left: -1rem;
+    right: -1rem;
+    bottom: -1rem;
+  }
+}
+
 .formIntegrations::before,
 .formIntegrations::after {
   content: '';
@@ -208,30 +219,50 @@ html[data-theme='dark'] {
 }
 
 .integrationFieldTrigger {
-  flex: 0 0 38.2%;
-  max-width: 260px;
   display: flex;
   align-items: center;
   cursor: pointer;
 }
 
 .integrationFieldDetails {
-  flex: 1 1 auto;
   margin-top: 1rem;
   font-size: 0.9em;
 }
 
+.integrationFieldDetails {
+  position: relative;
+  margin-bottom: 2rem;
+}
+
 @media (min-width: 767px) {
   .integrationFieldDetails {
-    margin-left: 1rem;
-    font-size: 1em;
+    margin-bottom: 0;
   }
 }
 
-.integrationFieldCategory {
-  margin-bottom: 0.5rem;
-  font-size: 1.5em;
+.integrationFieldDetails::before {
+  content: '';
+  display: block;
+  border-top: 1px solid currentColor;
+  opacity: 0.3;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -1rem;
 }
+
+.integrationFieldCategory {
+  font-size: 1.5em;
+  margin: 0;
+  max-width: 220px;
+}
+
+@media (min-width: 767px) {
+  .integrationFieldCategory {
+    margin-bottom: 0.5rem;
+  }
+}
+
 .integrationFieldCompany {
   display: flex;
   align-items: center;
@@ -541,7 +572,16 @@ html[data-theme='dark'] {
 
 .switchContent {
   width: 100%;
-  margin-left: 1rem;
+  margin-left: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media (min-width: 767px) {
+  .switchContent {
+    display: block;
+  }
 }
 
 .switchInput {
